dex/ckb-indexer/dex-api-ckb-testnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-api-ckb-testnet-svc
  namespace: ckb-dex
  labels:
    app: dex-api-ckb-testnet-svc
spec:
  ports:
  - name: rpc
    port: 8114
    targetPort: 8114
    protocol: TCP
  - name: websokcet
    port: 28114
    targetPort: 28114
    protocol: TCP
  type: ClusterIP
  selector:
    app: dex-api-ckb-testnet
