dex/ckb-indexer/dex-ckb-testnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-dex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-dex-ckb-testnet
spec:
  rules:
  - host: rpc-gliaswap.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: dex-ckb-testnet-svc
          servicePort: 8114
